# sistema_de_deteccion_de_fraude

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  fly.toml  main.py  pyproject.toml  test.py
notebooks/: EDA.ipynb  XGB.ipynb
src/: predict.py  train.py  transform.py
