[project]
name = "sistema-de-deteccion-de-fraude"
version = "0.1.0"
description = "Sistema de detección de fraude con XGBoost y FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.127.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.1",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]

